# chemFilters

./: .gitignore  .readthedocs.yml  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: cli.md  conf.py  generate_figures.py  index.md  installation.md
docs/_static/: custom.css
docs/api/: chem.md  core.md  filters.md  index.md  logger.md  rendering.md
docs/usage/: filtering.md  index.md  standardization.md  visualization.md
src/chemFilters/: __init__.py  bloom_filters.py  cli.py  core.py  filters.py  img_render.py  logger.py  pep_filters.py  pepfilters.py  rdkit_filters.py  silly_filters.py  smallworld.py  utils.py  version_helper.py
src/chemFilters/chem/: interface.py  standardizers.py  utils.py
src/chemFilters/filters/: bloom_filters.py  pep_filters.py  rdkit_filters.py  silly_filters.py  utils.py
src/chemFilters/resources/: sw_parameters.csv
tests/: test_bloom_filters.py  test_core.py  test_filters.py  test_img_render.py  test_interface.py  test_pep_filters.py  test_rdkit_filters.py  test_silly_filters.py  test_standardizers.py
tests/resources/: testSmiles.smi  testSmiles_allFiltered.csv  testSmiles_bloomfiltered.csv  testSmiles_pepfiltered.csv  testSmiles_rdfiltered.csv  testSmiles_sillyfiltered.csv
