[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chem-filters"
dynamic = ["version"]
description = "A Python package wrapping several chemical structure filtering utilities."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["chemical structure", "filtering", "cheminformatics", "pains"]
authors = [{ name = "David Araripe", email = "david.araripe17@gmail.com" }]
maintainers = [{ name = "David Araripe", email = "david.araripe17@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.9",
]

dependencies = [
  "tqdm",
  "pandas",
  "rdkit >= 2023.03.1",
  "pepsift @ git+https://github.com/OlivierBeq/PepSift.git#master",
  "chembl_structure_pipeline >= 1.2.0",
  "molspotter @ git+https://github.com/OlivierBeq/molspotter.git#master",
  "molbloom @ git+https://github.com/whitead/molbloom.git#master",
]

[project.optional-dependencies]
full = [
  "smallworld-api",
  "papyrus_structure_pipeline @ git+https://github.com/OlivierBeq/Papyrus_structure_pipeline.git",
  "tables",
]
dev = [
  "tox",
  "ruff",
  "isort",
  "black",
  "smallworld-api",
  "papyrus_structure_pipeline @ git+https://github.com/OlivierBeq/Papyrus_structure_pipeline.git",
  "tables"
]

[project.scripts]
chemfilters = "chemFilters.cli:main"

[project.urls]
homepage = "https://github.com/David-Araripe/chemFilters"
repository = "https://github.com/David-Araripe/chemFilters"
# documentation = "https://readthedocs.org" TODO

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "chemFilters.__version__" }

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ['py39']
exclude = '''
(
    asv_bench/env
  | \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)
'''

[tool.ruff]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules.
select = ["E", "F", "B", "W"]
ignore = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

# Assume Python 3.9.
target-version = "py39"
