[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "chem-filters"
dynamic = ["version"]
description = "A Python package wrapping several chemical structure filtering, rendering and standardization utilities."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["chemical structure", "filtering", "cheminformatics", "pains"]
authors = [{ name = "David Araripe", email = "david.araripe17@gmail.com" }]
maintainers = [{ name = "David Araripe", email = "david.araripe17@gmail.com" }]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.9",
  "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = [
  "tqdm",
  "numpy",
  "pandas",
  "rdkit >= 2023.03.1",
  "pepsift",
  "chembl_structure_pipeline >= 1.2.0",
  "molspotter",
  "molbloom",
  "loguru",
]

[project.optional-dependencies]
full = [
  "smallworld-api",
  "papyrus_structure_pipeline",
  "molvs",
]
dev = [
  "pytest",
  "ruff",
  "isort",
  "black",
  "smallworld-api",
  "papyrus_structure_pipeline",
  "molvs",
]

[project.scripts]
chemfilters = "chemFilters.cli:main"

[project.urls]
homepage = "https://github.com/David-Araripe/chemFilters"
repository = "https://github.com/David-Araripe/chemFilters"
# documentation = "https://readthedocs.org" TODO

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "chemFilters.__version__" }

[tool.setuptools_scm]
write_to = "src/chemFilters/_version.py"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ['py39']
exclude = '''
(
    asv_bench/env
  | \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)
'''

[tool.ruff]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules.
select = ["E", "F", "B", "W"]
ignore = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

# Assume Python 3.9.
target-version = "py39"
